--- a/micro-dash/style.css
+++ b/micro-dash/style.css
@@ -9,11 +9,26 @@ body {
   padding: 0;
   background-image: url("images/background.jpg");
   background-position: cover;
+  width: 100%;
 }
 
 body {
   background-color: rgba(255, 255, 255, 0.4);
   background-blend-mode: multiply;
+}
+
+table {
+  width: 100%;
+}
+
+th,
+td {
+  padding: 0.25em;
+  text-align: center;
+}
+
+.td-service {
+  text-align: left;
 }
 
 .nav ul {
@@ -49,8 +64,8 @@ body {
   background-color: #366f7a;
   background-blend-mode: multiply;
   background-size: cover;
-  padding-bottom: 30px;
-  padding-top: 30px;
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
 
 .system_name {
@@ -72,7 +87,7 @@ body {
 .section_header {
   text-align: center;
   font-size: 2em;
-  margin: 1em;
+  margin: 0.5em;
 }
 
 .rigs-header {
@@ -137,7 +152,8 @@ body {
 }
 
 .shop-item {
-  margin: 30px;
+  margin: 1em;
+  padding: 0.5em;
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: multiply;
   background-size: cover;
@@ -148,7 +164,7 @@ body {
 }
 
 .button-item {
-  margin: 30px;
+  margin: 0.5em;
   background-size: cover;
 }
 
@@ -158,7 +174,7 @@ body {
   text-align: center;
   font-weight: bold;
   font-size: 1.3em;
-  margin: 1em;
+  margin: 0.5em;
 }
 
 .shop-item-image {
